# overseer

./: .gitignore  AGENTS.md  README.md  justfile
.github/workflows/: release.yml
docs/: ARCHITECTURE-V2.md  ARCHITECTURE.md  CLI.md  MCP.md
docs/inspiration/: DESIGN-ANALYSIS.md
docs/specs/: task-viewer.md  ui-bundling-plan.md  ui-feedback-fixes.md
host/src/: cli.ts  decoder.ts  executor.ts  index.ts  mcp.ts  types.ts  ui.ts
host/src/api/: learnings.ts  tasks.ts
npm/overseer/: package.json
npm/scripts/: generate-platform-package.mjs  local-package-meta.mjs  update-versions.mjs
overseer/: Cargo.toml
overseer/src/: error.rs  lib.rs  main.rs  output.rs  types.rs
overseer/src/commands/: data.rs  mod.rs  task.rs
overseer/src/core/: task_service.rs  workflow_service.rs
overseer/src/db/: schema.rs  task_repo.rs
scripts/: generate-types.sh
skills/overseer-plan/references/: api.md  examples.md  implementation.md
skills/overseer/references/: api.md  examples.md
specs/: cli-dx-ux.md  task-archival-cancellation.md  ui-redesign.md
ui/: AGENTS.md
ui/scripts/: ai-review.sh  test-ui.sh
ui/src/: decoder.ts  types.ts
ui/src/api/: app.ts
ui/src/api/routes/: tasks.ts
ui/src/client/components/: CustomSelect.css  CustomSelect.tsx  TaskDetail.tsx  TaskGraph.tsx  TaskList.tsx
ui/src/client/components/views/: KanbanView.tsx
