[package]
name = "overseer"
version = "0.11.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "os"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"

# Storage
rusqlite = { version = "0.38", features = ["bundled"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "=1.0.145"

# Utilities
thiserror = "2.0"
owo-colors = { version = "4", features = ["supports-colors"] }
chrono = { version = "0.4", features = ["serde"] }
ulid = "1.2"

[dev-dependencies]
tempfile = "3.24"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
